fixed carousel controls and image alignment

--- a/src/Styles/_shop.scss
+++ b/src/Styles/_shop.scss
@@ -32,7 +32,6 @@
             
             img {
                 width: 100%;
-                height: 100%;
                 object-fit: cover;
                 
             }
@@ -43,13 +42,13 @@
                 left: 12%;
                 background-color: $colorWhite;
                 display: flex;
-                align-items: center;
+                
                 justify-content: center;
                 width: 30px;
                 height: 30px;
-                border-radius: 15px;
+                border-radius: 50%;
                 img {
-                    scale: 0.4;
+                    scale: 0.3;
                 }
                 display: none;
                 @media only screen and (max-width: 869px) {
@@ -65,13 +64,13 @@
                 right: 12%;
                 background-color: $colorWhite;
                 display: flex;
-                align-items: center;
+               
                 justify-content: center;
                 width: 30px;
                 height: 30px;
-                border-radius: 15px;
+                border-radius: 50%;
                 img {
-                    scale: 0.4;
+                    scale: 0.3;
                 }
                 display: none;
                 @media only screen and (max-width: 869px) {
